--- a/service-worker-lab/app/index.html
+++ b/service-worker-lab/app/index.html
@@ -49,11 +49,13 @@ limitations under the License.
         console.log('Service worker not supported');
       }
 
-      navigator.serviceWorker.register('./service-worker.js').then(() => {
-        console.log('Registered');
-      }).catch(err => {
-        console.log('Registration failed:', err);
-      })
+      navigator.serviceWorker.register('./service-worker.js', { scope: './below/' })
+        .then((registration) => {
+          console.log('Registered at scope:', registration.scope);
+        })
+        .catch(err => {
+          console.log('Registration failed:', err);
+        })
 
     })();
   </script>
